<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShareYourPhotoApp</string>
    <string name="title_activity_main">Drafts and Sent Messages</string>
    <string name="title_activity_share">Share</string>
    <string name="str_address">Address:</string>
    <string name="str_subject">Subject:</string>
    <string name="str_email">E-mail:</string>
    <string name="str_body">Body</string>
    <string name="btnRemoveAll">Remove All</string>
    <string name="btnShare">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_new_message">Add new message</string>
    <string name="no_email">Please, fill the Email field.</string>
    <string name="no_photo">You don\'t set photo.</string>
    <string name="no_camera">You have no camera on device.</string>
    
    <!-- Dialogs buttons strings -->
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_save">Save</string>
    <string name="str_cancel">Cancel</string>
    
    <!-- Dialogs messages strings -->
    <string name="remove_dialog">Are you sure you want to remove this message?</string>
    <string name="remove_all_dialog">Are you sure you want to remove all messages?</string>
    <string name="save_dialog">Would you like to save this message as a draft?</string>
    
    <!-- Add Photo Dialog Strings -->
    <string name="btn_camera">Camera</string>
    <string name="btn_gallery">Photo Gallery</string>
    <string name="btn_cancel">Cancel</string>

</resources>