<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:background="@color/screen_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.asia.shareyourphotoapp.ShareActivity" >

    <ImageButton
        android:id="@+id/btnAddPhoto"
        android:layout_width="@dimen/iv_add_photo_width"
        android:layout_height="@dimen/iv_add_photo_height"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:src="@drawable/camera" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/margin_top"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_share"
        android:text="@string/str_email"/>
    
    <EditText 
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:background="@color/white"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/margin_top"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_share"
        android:text="@string/str_subject"/>
    
    <EditText 
        android:id="@+id/etSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:background="@color/white"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/margin_top"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_share"
        android:text="@string/str_body"/>
    
    <EditText 
        android:id="@+id/etBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="text"
        android:background="@color/white"/>
    
    <Button 
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textColor="@color/white"
        android:text="@string/btnShare"/>

</LinearLayout>
